<resources>
    <string name="app_name">Coffee Generator!</string>
    <string name="hello67">hello</string>
    <string name="customize_me">Customize Me!</string>
    <string name="generate_me">Generate Me!</string>
    <string name="drink_generator">Drink Generator!</string>
    <string name="or1">or</string>
    <string name="coffee">Coffee</string>
    <string name="no_coffee">No Coffee</string>
    <string name="hot">Hot</string>
    <string name="iced">iced</string>
    <string name="blended">blended</string>
    <string name="skip3">Skip</string>
    <string name="_2">2%</string>
    <string name="_1">1%</string>
    <string name="skip2">skip</string>
    <string name="nonfat">Nonfat</string>
    <string name="whole">Whole</string>
    <string name="heavy_cream">Heavy Cream</string>
    <string name="breve">Breve</string>
    <string name="almond">Almond</string>
    <string name="coconut">Coconut</string>
    <string name="oat">Oat</string>
    <string name="soy">Soy</string>
    <string name="choose_a_milk">Choose a milk!</string>
    <string name="whip_cream">Whip Cream</string>
    <string name="no_whip_cream">No Whip Cream</string>
    <string name="or2">or</string>
    <string name="or">or</string>
    <string name="hello">hello</string>
    <string name="click_to_go_to_toppings">click to go to toppings</string>
    <string name="skip">Skip</string>
    <string name="skip5">skip</string>
    <string name="pick_your_flavours">Pick your flavours!</string>
    <string name="next">Next</string>
    <string name="chai">Chai</string>
    <string name="vanilla">Vanilla</string>
    <string name="white_mocha">White Mocha</string>
    <string name="mocha">Mocha</string>
    <string name="sf_vanilla">SF Vanilla</string>
    <string name="caramel">Caramel</string>
    <string name="hazlenut">Hazlenut</string>
    <string name="hazelnut">Hazelnut</string>
    <string name="click_me_to_generate">Click me to Generate!</string>
    <string name="skip8">skip</string>
    <string name="pick_your_toppings">Pick your toppings!</string>
    <string name="next2">next</string>
    <string name="pumpkin_spice">Pumpkin Spice</string>
    <string name="caramel_drizzle">Caramel Drizzle</string>
    <string name="mocha_drizzle">Mocha Drizzle</string>
    <string name="cinnamon_powder">Cinnamon Powder</string>
    <string name="cinnamon_sugar">Cinnamon Sugar</string>
    <string name="nutmeg">Nutmeg</string>
    <string name="pumpkin_spice2">Pumpkin Spice</string>
    <string name="here_is_your_customized_drink">Here is your Customized Drink!</string>
    <string name="ready_for_your_drink">Ready for your drink?!</string>
    <string name="click_me_to_generate2">Click me to Generate!</string>
    <string name="one_percent">One Percent</string>
    <string name="two_percent">Two Percent</string>
    <string name="whole_milk">Whole Milk</string>
    <string name="nonfat_milk">Nonfat Milk</string>
    <string name="heavy_Cream">Heavy Cream</string>
    <string name="breve1">Breve</string>
    <string name="coconut_milk">Coconut Milk</string>
    <string name="almond_milk">Almond Milk</string>
    <string name="soy_milk">Soy Milk</string>
    <string name="oat_milk">Oat Milk</string>
    <string name="choose_a_Milk">Choose a Milk!</string>
    <string name="next1">Next</string>
    <string name="whip_cream2">Whip Cream</string>
    <string name="no_whip_cream1">No whip Cream</string>
    <string name="no_whip_cream5">no whip cream</string>
    <string name="whip_cream4">whip cream</string>
    <string name="whip_or_no_whip">Whip or no whip?</string>
    <string name="would_you_like_your_drink_to_be_hot_iced_or_blended">Would you like your drink to be hot, iced, or blended?</string>
    <string name="would_you_like_coffee_in_your_drink_or_no_coffee">Would you like coffee in your drink, or no coffee?</string>
    <string name="randomize">Randomize</string>
    <string name="pick_your_flavour">Pick Your Flavour!</string>
    <string name="this_is_the_background_for_the_main_page">This is the background for the main page</string>
    <string name="your_drink">Your drink!</string>
    <string name="hotLowercase">hot</string>
    <string name="this_is_the_background_for_the_choices">backgroundChoices</string>
</resources>