<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".alternativeMilk">

    <Button
        android:id="@+id/twoPercentBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="111dp"
        android:layout_marginTop="116dp"
        android:fontFamily="@font/autour_one"
        android:text="@string/_2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/onePercentBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/onePercentBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:fontFamily="@font/autour_one"
        android:text="@string/_1"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/twoPercentBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/skipBtn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/autour_one"
        android:text="@string/skip2"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.951" />

    <Button
        android:id="@+id/nonfatBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/autour_one"
        android:text="@string/nonfat"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/wholeBtn"
        app:layout_constraintStart_toStartOf="@+id/onePercentBtn"
        app:layout_constraintTop_toTopOf="@+id/wholeBtn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/wholeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/autour_one"
        android:text="@string/whole"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/twoPercentBtn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/nonfatBtn"
        app:layout_constraintTop_toBottomOf="@+id/twoPercentBtn" />

    <Button
        android:id="@+id/heavyCreamBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/autour_one"
        android:text="@string/heavy_cream"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/breveBtn"
        app:layout_constraintEnd_toEndOf="@+id/nonfatBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/breveBtn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/breveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/autour_one"
        android:text="@string/breve"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="@+id/wholeBtn"
        app:layout_constraintTop_toBottomOf="@+id/wholeBtn" />

    <Button
        android:id="@+id/almondBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/autour_one"
        android:text="@string/almond"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/coconutBtn"
        app:layout_constraintEnd_toStartOf="@+id/coconutBtn"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="@+id/heavyCreamBtn"
        app:layout_constraintTop_toTopOf="@+id/coconutBtn"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/coconutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/autour_one"
        android:text="@string/coconut"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/breveBtn"
        app:layout_constraintTop_toBottomOf="@+id/breveBtn" />

    <Button
        android:id="@+id/oatBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/autour_one"
        android:text="@string/oat"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/soyBtn"
        app:layout_constraintEnd_toStartOf="@+id/soyBtn"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/soyBtn"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/soyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="72dp"
        android:fontFamily="@font/autour_one"
        android:text="@string/soy"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coconutBtn" />

    <TextView
        android:id="@+id/chooseMilk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/autour_one"
        android:text="@string/choose_a_milk"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064" />
</androidx.constraintlayout.widget.ConstraintLayout>