<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/flavourbtn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".syrupFlavours">


    <TextView
        android:id="@+id/pickYourFlavours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/autour_one"
        android:text="@string/pick_your_flavour"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049" />


    <RadioGroup
        android:id="@+id/flavoursRadioBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.726">

        <RadioButton
            android:id="@+id/whiteMochaRbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/autour_one"
            android:onClick="onClickSyrupRadioButton"
            android:text="@string/white_mocha"
            android:textSize="20sp"
            tools:ignore="UsingOnClickInXml"
            tools:layout_editor_absoluteX="94dp"
            tools:layout_editor_absoluteY="228dp" />

        <RadioButton
            android:id="@+id/mochaRbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/autour_one"
            android:onClick="onClickSyrupRadioButton"
            android:text="@string/mocha"
            android:textSize="20sp"
            tools:ignore="UsingOnClickInXml"
            tools:layout_editor_absoluteX="94dp"
            tools:layout_editor_absoluteY="228dp" />

        <RadioButton
            android:id="@+id/vanillaRbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/autour_one"
            android:onClick="onClickSyrupRadioButton"
            android:text="@string/vanilla"
            android:textSize="20sp"
            tools:ignore="UsingOnClickInXml"
            tools:layout_editor_absoluteX="94dp"
            tools:layout_editor_absoluteY="228dp" />

        <RadioButton
            android:id="@+id/sfVanillaRbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/autour_one"
            android:onClick="onClickSyrupRadioButton"
            android:text="@string/sf_vanilla"
            android:textSize="20sp"
            tools:ignore="UsingOnClickInXml"
            tools:layout_editor_absoluteX="94dp"
            tools:layout_editor_absoluteY="228dp" />

        <RadioButton
            android:id="@+id/caramelRbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/autour_one"
            android:onClick="onClickSyrupRadioButton"
            android:text="@string/caramel"
            android:textSize="20sp"
            tools:ignore="UsingOnClickInXml"
            tools:layout_editor_absoluteX="94dp"
            tools:layout_editor_absoluteY="228dp" />

        <RadioButton
            android:id="@+id/chaiRbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/autour_one"
            android:onClick="onClickSyrupRadioButton"
            android:text="@string/chai"
            android:textSize="20sp"
            tools:ignore="UsingOnClickInXml"
            tools:layout_editor_absoluteX="94dp"
            tools:layout_editor_absoluteY="228dp" />

        <RadioButton
            android:id="@+id/hazelnutRbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/autour_one"
            android:onClick="onClickSyrupRadioButton"
            android:text="@string/hazelnut"
            android:textSize="20sp"
            tools:ignore="UsingOnClickInXml"
            tools:layout_editor_absoluteX="94dp"
            tools:layout_editor_absoluteY="228dp" />

        <RadioButton
            android:id="@+id/pumpkinSpiceFlavourRbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/autour_one"
            android:onClick="onClickSyrupRadioButton"
            android:text="@string/pumpkin_spice"
            android:textSize="20sp"
            tools:ignore="UsingOnClickInXml"
            tools:layout_editor_absoluteX="94dp"
            tools:layout_editor_absoluteY="228dp" />

        <RadioButton
            android:id="@+id/randomSyrupRbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="110dp"
            android:layout_marginBottom="62dp"
            android:fontFamily="@font/autour_one"
            android:onClick="onClickSyrupRadioButton"
            android:text="@string/randomize"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="OnClick,UsingOnClickInXml" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>