<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/skipBtn7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".toppings">


    <TextView
        android:id="@+id/pickYourToppings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/autour_one"
        android:text="@string/pick_your_toppings"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096" />


    <RadioGroup
        android:id="@+id/toppingsRadioBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497">

        <RadioButton
            android:id="@+id/caramelDrizzleRbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/autour_one"
            android:onClick="onClickToppingRadioButton"
            android:text="@string/caramel_drizzle"
            android:textSize="20sp"
            tools:ignore="UsingOnClickInXml"
            tools:layout_editor_absoluteX="94dp"
            tools:layout_editor_absoluteY="228dp" />

        <RadioButton
            android:id="@+id/mochaDrizzleRbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/autour_one"
            android:onClick="onClickToppingRadioButton"
            android:text="@string/mocha_drizzle"
            android:textSize="20sp"
            tools:ignore="UsingOnClickInXml"
            tools:layout_editor_absoluteX="94dp"
            tools:layout_editor_absoluteY="228dp" />

        <RadioButton
            android:id="@+id/cinnamonPwdRbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/autour_one"
            android:onClick="onClickToppingRadioButton"
            android:text="@string/cinnamon_powder"
            android:textSize="20sp"
            tools:ignore="UsingOnClickInXml"
            tools:layout_editor_absoluteX="94dp"
            tools:layout_editor_absoluteY="228dp" />

        <RadioButton
            android:id="@+id/cinnamonSugarRbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/autour_one"
            android:onClick="onClickToppingRadioButton"
            android:text="@string/cinnamon_sugar"
            android:textSize="20sp"
            tools:ignore="UsingOnClickInXml"
            tools:layout_editor_absoluteX="94dp"
            tools:layout_editor_absoluteY="228dp" />

        <RadioButton
            android:id="@+id/nutmegRbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/autour_one"
            android:onClick="onClickToppingRadioButton"
            android:text="@string/nutmeg"
            android:textSize="20sp"
            tools:ignore="UsingOnClickInXml"
            tools:layout_editor_absoluteX="94dp"
            tools:layout_editor_absoluteY="228dp" />

        <RadioButton
            android:id="@+id/pumpkinSpiceRbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/autour_one"
            android:onClick="onClickToppingRadioButton"
            android:text="@string/pumpkin_spice"
            android:textSize="20sp"
            tools:ignore="UsingOnClickInXml"
            tools:layout_editor_absoluteX="94dp"
            tools:layout_editor_absoluteY="228dp" />

        <RadioButton
            android:id="@+id/randomToppingRbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="110dp"
            android:layout_marginBottom="54dp"
            android:fontFamily="@font/autour_one"
            android:onClick="onClickToppingRadioButton"
            android:text="@string/randomize"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UsingOnClickInXml" />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>