<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".customizeCoffee">

    <TextView
        android:id="@+id/or_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/autour_one"
        android:text="@string/would_you_like_coffee_in_your_drink_or_no_coffee"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107" />


    <RadioGroup
        android:id="@+id/coffeeOrNoRGBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="328dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/coffeeRbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/autour_one"
            android:onClick="onClickCoffeeBtn"
            android:text="@string/coffee"
            android:textSize="34sp"
            tools:ignore="OnClick,UsingOnClickInXml"
            tools:layout_editor_absoluteX="94dp"
            tools:layout_editor_absoluteY="228dp" />

        <RadioButton
            android:id="@+id/noCoffeeRbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/autour_one"
            android:onClick="onClickCoffeeBtn"
            android:text="@string/no_coffee"
            android:textSize="34sp"
            tools:ignore="OnClick,UsingOnClickInXml"
            tools:layout_editor_absoluteX="74dp"
            tools:layout_editor_absoluteY="427dp" />

        <RadioButton
            android:id="@+id/randomCoffeeRbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/autour_one"
            android:onClick="onClickCoffeeBtn"
            android:text="@string/randomize"
            android:textSize="34sp"
            tools:ignore="OnClick,UsingOnClickInXml"
            tools:layout_editor_absoluteX="74dp"
            tools:layout_editor_absoluteY="427dp" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>